fix(ui): profile-info | user image alignment fix.

--- a/pages/personal-info/style.scss
+++ b/pages/personal-info/style.scss
@@ -12,6 +12,8 @@
       justify-content: center;
 
       figure {
+        display: flex;
+        justify-content: center;
         width: 80px;
         height: 80px;
         margin-bottom: 20px;
